fix logElements overflowing due to fixed heights.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -755,7 +755,7 @@ a:hover {
 
 .logElement {
   background-color: #222222;
-  height: 25px;
+  height: max-content;
   display: flex;
 }
 
